--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,9 @@ edition = "2021"
 [dependencies]
 
 [[bin]]
+name="day1"
+path="src/bin/day1.rs"
+
+[[bin]]
 name="demoday1"
 path="src/bin/demoday01.rs"
