--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,9 @@ name="day1"
 path="src/bin/day1.rs"
 
 [[bin]]
+name="day2"
+path="src/bin/day2.rs"
+
+[[bin]]
 name="demoday1"
 path="src/bin/demoday01.rs"
