--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,5 +42,5 @@ name="day9"
 path="src/bin/day9.rs"
 
 [[bin]]
-name="day12"
-path="src/bin/day12.rs"
+name="day12part2"
+path="src/bin/day12part2.rs"
