--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,6 @@ path="src/bin/day5.rs"
 name="day6"
 path="src/bin/day6.rs"
 
-
 [[bin]]
 name="day8"
 path="src/bin/day8.rs"
@@ -49,3 +48,7 @@ path="src/bin/day12part2.rs"
 [[bin]]
 name="day14"
 path="src/bin/day14.rs"
+
+[[bin]]
+name="day15"
+path="src/bin/day15.rs"
